<resources>
    <string name="app_name">Sales Tracking</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="add_category">Add Client</string>
    <string name="enter_category">Enter Client</string>
    <string name="category_color">Client Color</string>
    <string name="add_color">Add Color</string>
    <string name="tasks_to_do">Opportunitys To Do</string>
    <string name="due_date">Due Date</string>
    <string name="completed">Completed</string>
    <string name="priority">Priority</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="settings">Settings</string>
    <string name="notification">Notification</string>
    <string name="low_priority_tasks">Low priority tasks</string>
    <string name="medium_priority_tasks">Medium priority tasks</string>
    <string name="high_priority_tasks">High priority tasks</string>
    <string name="general">General</string>
    <string name="opportunity">opportunity</string>
    <string name="create_opportunity">Create Opportunity</string>
    <string name="add_new_client">+ Add New Client</string>
    <string name="adding_new_client">Add Client</string>
    <string name="edt_client_contact_name">Client Contact Name</string>
    <string name="edt_client_contact_pos">Client Contact Position</string>
    <string name="edt_opportunity_desc">Opportunity Description</string>
    <string name="status">Status</string>
    <string name="submit">Submit</string>
    <string name="addressline1_hint">Address:</string>
    <string name="edittext_hint">"Click here to edit address location"</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="edt_client_name">Client Name</string>
    <string name="edt_project_name">Project Name</string>
    <string name="edt_opportunity_type">Opportunity Type</string>
    <string name="assign_projects">Assign Project</string>
    <string name="view_opportunity">View Opportunity</string>
    <string name="edit_opportunity">Edit Opportunity</string>
    <string name="opportunity_details">Opportunity Details</string>
    <string name="comments_notes">Comments/Notes</string>
    <string name="view_all_comments_notes">View All Comments/Notes</string>
    <string name="comment">Comment</string>
    <string name="action_items">Action Items</string>
    <string name="mom_items">MOM Action Items</string>
    <string name="mom_item">MOM Action Item</string>
    <string name="pending_action">Pending Action Items</string>
    <string name="client_escalation">Client Escalation</string>
    <string name="add_opportunity">Add Opportunity</string>
    <string name="add_meeting">Add Meeting</string>
    <string name="view_meeting">View All Meetings</string>
    <string name="edit_mom">Edit MOM</string>
    <string name="edit_action_item">Edit Action Item</string>
    <string name="escalation_items">Escalations</string>
    <string name="escalation_item">Escalation Details</string>
    <string name="edt_meeting_title">Meeting Title</string>
    <string name="edt_meeting_notes">Meeting Notes</string>
    <string name="edt_expected_info_from_clients">Exoected Info From client</string>
    <string name="edt_expected_info_from_tekskills">Expected Info From Tekskills</string>
    <string name="edt_tekskills_action_items">Tekskills Action Items</string>
    <string name="action_item_date">Action Item Completion Date: </string>
    <string name="edt_action_item_date">Action Item Completion Date</string>
    <string name="edt_escalated_desc">Escalation Description</string>
    <string name="escalated_raised_date">Escalation Raised Date: </string>
    <string name="edt_escalated_raised_date">Escalation Raised Date</string>
    <string name="escalated_resolved_date">Escalation Resolved Date: </string>
    <string name="edt_escalated_resolved_date">Escalation Resolved Date</string>
    <string name="permission_required">Permission Required</string>
    <string name="permission_description">In order to use the application, Please provide the runtime permissions</string>
    <string name="continue_text">Continue</string>
    <string name="just_now">just now</string>
    <plurals name="seconds_ago">
        <item quantity="one">%d second ago</item>
        <item quantity="other">%d seconds ago</item>
    </plurals>
    <plurals name="minutes_ago">
        <item quantity="one">%d minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>
    <plurals name="hours_ago">
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>
    <plurals name="days_ago">
        <item quantity="one">%d day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>
    <string name="not_found">No Data Found</string>
    <string name="type_to_search">Search..</string>
    <string name="action_item">Action Item</string>
    <string name="client_name">Client Name: </string>
    <string name="project_name">Project Name: </string>
    <string name="opportunity_type">Opportunity Type: </string>
    <string name="opportunity_desc">Opportunity Desc: </string>
    <string name="meeting_title">Meeting Title: </string>
    <string name="meeting_notes">Meeting Notes: </string>
    <string name="meeting_time">Meeting Time: </string>
    <string name="meeting_date">Meeting Date: </string>
    <string name="edt_meeting_time">Meeting Time</string>
    <string name="edt_meeting_date">Meeting Date</string>
    <string name="expected_info_from_clients">Expected Info From Client: </string>
    <string name="expected_info_from_tekskills">Expected Info From Tekskills: </string>
    <string name="tekskills_action_items">Tekskills Action Item: </string>
    <string name="no_internet">No internet connection</string>
    <string name="active">Active</string>
    <string name="edt_visit_purpose">Purpose Of Visit</string>
    <string name="edt_no_of_days">No Of Day\'s</string>
    <string name="visit_date">Visit Date</string>
    <string name="source">Source Location</string>
    <string name="destination">Destination Location</string>
    <string name="view_meetings">View Meetings</string>
    <string name="kms">Distance(Kms)</string>
    <string name="purpose_visit_details">Purpose Of Visit</string>
    <string name="src_loc">Source Location</string>
    <string name="des_loc">Destination Location</string>
    <string name="advance_amount">Advance Amount</string>
    <string name="expenses">Expenses</string>
    <string name="travel_expenses">Travel Expenses</string>
    <string name="hotel_expenses">Hotel Expenses</string>
    <string name="food_expenses">Food Expenses</string>
    <string name="from_loc">From Location</string>
    <string name="to_loc">To Location</string>
    <string name="travel_date">Travel Date</string>
    <string name="hotel_loc">Hotel Location</string>
    <string name="hotel_amount">Hotel Amount</string>
    <string name="book_date">Booking Date</string>
    <string name="food_amount">Food Amount</string>
    <string name="food_comment">Comment</string>
    <string name="distance">Distance</string>
    <string name="msgDeniedPermission">Permission Denied</string>
    <string name="mode_type">Mode Of Travel</string>
    <string name="hotel_from_date">Booking Date</string>
    <string name="hotel_to_date">Vacate Date</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="contact">Contact</string>
    <string name="email">Email Address</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="return_from_loc">Return From Location</string>
    <string name="return_to_loc">Return To Location</string>
    <string name="return_travel_date">Return Travel Date</string>
    <string name="customer_name">Contact Person Name</string>
    <string name="customer_contact">Contact Person Phone Number</string>
    <string name="customer_email">Contact Person Email-ID</string>
    <string name="home">Home</string>
    <string name="farmer_name">Farmer Name</string>
    <string name="farmer_contact">Farmer Contact Number</string>
    <string name="farmer_email">Farmer Email-ID</string>
    <string name="mode_of_travel_prompt">Mode Of Travel</string>
    <string name="travel_expenses_details">Travel Expenses Details</string>
    <string name="hotel_expenses_details">Hotel Expenses Details</string>
    <string name="food_expenses_details">Food Expenses Details</string>
    <string name="allotted_expenses">Allotted Expenses</string>
    <string name="travel_expenses_info">Expenses Info</string>
    <string name="hotel_expenses_info">Expenses Info</string>
    <string name="view_all_expenses">View All Expenses</string>
    <string name="travel_expense_amount">Travel Expense Amount</string>
    <string name="hotel_expense_amount">Hotel Expense Amount</string>
    <string name="book_amount">Booking Amount</string>
    <string name="contact_person">Contact Person</string>
    <string name="check_out">Check-Out</string>
    <string name="check_in">Check-IN</string>
    <string name="add_mom">Add MOM</string>
    <string name="edt_info_from_clients">Info From client</string>
    <string name="target_date">Target Date</string>
    <string name="add_meeting_updates">Meeting Updates</string>
    <string name="add_travel_expense">Add Travel Expense</string>
    <string name="add_hotel_expenses">Add Hotel Expense</string>
    <string name="add_food_expenses">Add Food Expense</string>
    <string name="view_all_mom_items">View All MOM Items</string>
    <string name="check_in_details">Check-IN Details</string>
    <string name="meeting_status">Meetings Status</string>
    <string name="note">Note:</string>
    <string name="allotted_amount">Allotted Amount</string>
    <string name="actual_amount">Actual Amount</string>
    <string name="rupee"> ₹</string>
    <string name="actual_amount_rupee">Actual ₹</string>
    <string name="allotted_amount_rupee">Allotted ₹</string>
    <string name="expense_type">Expense Type</string>
    <string name="instruction_where_description">Where do you want to add a geofence?</string>
    <string name="instruction_where_subtitle_description">Drag the map to set the location</string>
    <string name="instruction_radius_description">Choose the radius</string>
    <string name="instruction_message_description">Enter the message</string>
    <string name="continue_description">Continue</string>
    <string name="error_required">Required</string>
    <string name="message_hint">We arrived! :]</string>
    <string name="radius_description">%1$s meters</string>
    <string name="reminder_removal_alert">Remove geofence?</string>
    <string name="reminder_removal_alert_positive">OK</string>
    <string name="reminder_removal_alert_negative">Cancel</string>
    <string name="reminder_added_success">Geofence added!</string>
    <string name="reminder_removed_success">Geofence removed!</string>
    <string name="marker_content_description">Marker</string>
    <string name="dialog_rationale_permission">We need notification permission to let you know through local push notification when you enter geo fence zone to send</string>
    <plurals name="num_locations_reported">
        <item quantity="zero">No location reported</item>
        <item quantity="one">One location reported</item>
        <item quantity="other">%d locations reported</item>
    </plurals>
    <string name="dialog_rationale_coarse_location">We need GPS Location in background so that we can guide you when you are at that locations</string>
    <string name="button_allow">Allow</string>
    <string name="button_reject">Reject</string>
    <string name="notification_check_in">Check-IN</string>
</resources>