<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_fragment"
            android:title="@string/home"
            android:visible="true"/>
<!--        <item-->
<!--            android:id="@+id/new_client"-->
<!--            android:title="@string/create_client"-->
<!--            />-->
<!--        <item-->
<!--            android:id="@+id/new_project"-->
<!--            android:title="@string/create_project"-->
<!--            />-->
<!--        <item-->
<!--            android:id="@+id/new_assign_project"-->
<!--            android:title="@string/add_opportunity"-->
<!--            android:visible="false"-->
<!--            />-->
        <item
            android:id="@+id/new_purpose_meeting"
            android:title="@string/add_meeting"
            android:visible="true" />
        <item
            android:id="@+id/view_meetings"
            android:title="@string/view_meeting"
            android:visible="true"
            android:defaultValue="" />
        <item
            android:id="@+id/view_opportunity_fragment"
            android:title="View Opportunity Tasks"
            android:visible="false" />
        <item
            android:id="@+id/settings_fragment"
            android:title="Settings"
            android:visible="true"/>
        <item
            android:id="@+id/map_fragment"
            android:visible="false"
            android:title="GeoLocation"/>
        <item
            android:id="@+id/logout"
            android:title="Logout"/>
    </group>
</menu>