<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.fragments.NewTaskFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_create_mom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/create_opportunity"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edt_client_contact_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:hint="@string/edt_client_contact_name"
                    app:boxStrokeWidth="2dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="50"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ll_oppurtunity">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:backgroundTint="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edtl_client_contact_position"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:hint="@string/edt_client_contact_pos"
                    app:boxStrokeWidth="2dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="150"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edt_client_contact_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_client_contact_position"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:backgroundTint="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edtl_opportunity_desc"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:hint="@string/edt_opportunity_desc"
                    app:boxStrokeWidth="2dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="150"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edtl_client_contact_position">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_opportunity_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:backgroundTint="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.chip.Chip
                    android:id="@+id/dateAndTimePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/due_date"
                    android:layout_marginHorizontal="10dp"
                    app:chipIcon="@drawable/ic_baseline_date_range_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edtl_opportunity_desc" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/status"
                    app:chipIcon="@drawable/ic_baseline_priority_high_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dateAndTimePicker"/>


                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/isCompleted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/dateAndTimePicker"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/completed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/chip_status" />

                <LinearLayout
                    android:id="@+id/ll_oppurtunity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/isCompleted"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_create_mom">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/categoryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:text="@string/client_name"
                        app:chipIcon="@drawable/ic_baseline_category_24" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/categoryChipGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginEnd="10dp"
                        android:padding="5dp"
                        app:chipSpacingHorizontal="4dp"
                        app:chipSpacingVertical="1dp"
                        app:selectionRequired="true"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:text="@string/add_new_client" />

                    </com.google.android.material.chip.ChipGroup>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/priorityText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:text="@string/priority"
                        app:chipIcon="@drawable/ic_baseline_priority_high_24" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/priorityChipGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:checkedChip="@id/low"
                        app:selectionRequired="true"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/low"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="@string/low" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/mid"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/medium" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/high"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="@string/high" />

                    </com.google.android.material.chip.ChipGroup>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/light_blue"
            android:text="@string/submit"
            app:icon="@drawable/ic_baseline_keyboard_arrow_up_24"
            app:iconGravity="end"
            app:iconPadding="3dp" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>